--- a/index.html
+++ b/index.html
@@ -1,2 +1,35 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>David Groothuizen Dijkema</title>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
+  <style>
+    body { padding-left: 10%; padding-top:3em; font-family: 'Zen Kaku Gothic New', sans-serif ; margin-right: 10% }
+    div {margin-left:-2em; margin-top:2em; padding-left:2em; padding-right:2em; padding-bottom:1em; margin-bottom:1em; padding-top:1em; border: 2px solid black; border-radius: 5px; overflow:auto; }
+  </style>
+</head>
 
-Hello, World!
+<body>
+  <h1>David C Groothuizen Dijkema</h1>
+
+  I am a doctoral candidate in mathematics at the University of Auckland.  I am interested in the mathematical theory of dynamical systems, and my thesis is about the dynamics near structures known as <i>heteroclinic networks</i>.
+
+  <p>
+
+  <b>Email</b>:
+
+  <p>
+
+  <b>University profile</b>:
+
+  <p>
+
+  <b>My CV</b>:
+
+</body>
+</html>
