Work on website

--- a/index.html
+++ b/index.html
@@ -17,19 +17,49 @@
 <body>
   <h1>David C Groothuizen Dijkema</h1>
 
-  I am a doctoral candidate in mathematics at the University of Auckland.  I am interested in the mathematical theory of dynamical systems, and my thesis is about the dynamics near structures known as <i>heteroclinic networks</i>.
+  I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
 
   <p>
-
-  <b>Email</b>:
-
-  <p>
-
-  <b>University profile</b>:
+  <a style="font-weight:bold" href="mailto:david.groothuizen.dijkema@auckland.ac.nz">My email: david.groothuizen.dijkema@auckland.ac.nz</a>
+  </p>
 
   <p>
+  <a style="font-weight:bold" href="https://profiles.auckland.ac.nz/david-groothuizen-dijkema">My University of Auckland profile.</a>
+  </p>
 
-  <b>My CV</b>:
+  <p>
+  <a href="documents/cv.pdf">My CV.</a>
+  </p>
+
+  <div id="publications">
+    <h2>Preprints</h2>
+    <ol reversed>
+      <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2022). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Submitted to Nonlinearity.</i> <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630</a></li>
+    </ol>
+  </div>
+
+  <div id="talks">
+    <h2>Talks and Posters</h2>
+    <h3>Talks</h2>
+    <ol reversed>
+      <li><b>(Upcoming) 12 May 2023</b>: <i>Switching near heteroclinic networks as a piecewise-smooth dynamical system</i>, SIAM Conference on Applications of Dynamical Systems 2023.</li>
+      <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="slides/nzms2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, New Zealand Mathematical Society Colloquium 2022.</li>
+      <li><b>14 November 2022</b>: <a href="slides/castaways2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, Sydney Dynamics Group Workshop 2022: Dynamical Systems in NZ - Castaways.</li>
+      <li><b>6 October 2022</b>: <a href="slides/amu2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, University of Auckland Department of Mathematics Applied Mathematics Postgraduate Seminar 2022.</li>
+      <li><b>7 June 2022</b>: <a href="slides/src2022.pdf" target="_blank">Stability and cycling near heteroclinic cycles and networks</a>, University of Auckland Department of Mathematics Student Research Conference 2022.</li>
+      <li><b>8 June 2021</b>: <i>Spatially extended models of competition between four species</i>, University of Auckland Department of Mathematics Postgraduate Student Seminar 2021</li>
+      <li><b>8 June 2021</b>: <i>A spatially-extended model of competition between four species</i>, University of Auckland Department of Mathematics Student Research Conference 2021</li>
+      <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, University of Auckland Summer Research Conference 2021</li>
+    </ol>
+
+    <a href="slides/src2022.pdf" target="_blank">Here is a GIF of the animation that accompanies many of the above talks.</a>
+
+    <h3>Posters</h2>
+      <ol reversed>
+        <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="posters/nzms2022.pdf" target="_blank">Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition</a>, New Zealand Mathematical Society Colloquium 2022.</li>
+        <li><b>13 October 2022</b>: <a href="posters/antipodeal.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth dynamical system</a>, Antipodeal Dynamics Workshop 2023.</li>
+      </ol>
+  </div>
 
 </body>
 </html>
