Work on research overview

--- a/index.html
+++ b/index.html
@@ -61,5 +61,17 @@
       </ol>
   </div>
 
+  <div id="publications">
+    <h2>Heteroclinic networks</h2>
+    
+    There are a number of ways to define heteroclinic cycles and networks,  all of which are somewhat unsatisfactory and . We want these directed graphs to be intransitive, so that no vertex has only edges coming in or going out.
+
+    Restricting to those networks in R4 which are of a certain type, there are three heteroclinic networks between four equilibria. One of them is commonly known as the Kirk-Silber network. I call the other two the Delta-clique network and the tournament network (though this last one is also called the jungle network).
+
+    We often ask questions about the stability of a network and its component cycles.
+
+    I am interested in questions which address the actual dynamics that is observed near heteroclinic networks.
+  </div>
+
 </body>
 </html>
