Open May Leonard link in new tab

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       &hellip;[A] nonlinear study of this domain of parameter space reveals &hellip; a wider class of asymptotic solutions in which the system cycles from being composed almost wholly of population 1, to almost wholly 2, to almost wholly 3, back to 1, but with the time to complete the cycle becoming longer and longer (being proportional to the length of time the system has been running), and with the system coming in turn ever closer to the points with 1 alone, 2 alone and 3 alone, yet never actually converging on any one point.
 
       <p>
-      <a href="https://doi.org/10.1137/0129022">May R and Leonard L 1975 <i>SIAM J. Appl. Math.</i> <b>29</b> 243</a>
+      <a href="https://doi.org/10.1137/0129022" target="_blank">May R and Leonard L 1975 <i>SIAM J. Appl. Math.</i> <b>29</b> 243</a>
     </blockquote>
 
     <hr>
