--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     ]. The correct way to say it in Dutch, however, is [<span style="font-family: sans-serif;">&#712;&#611;&#638;&#111;&#720;&#116;.&#614;&#339;&#121;&#815;.&#122;&#618;&#110; &#712;&#100;&#603;&#105;&#815;.&#107;&#601;.&#109;&#593;</span>]. In the dialect where my family is from, it is said [<span style="font-family: sans-serif;">&#712;&#967;&#638;&#596;&#117;&#815;&#116;.&#614;&#339;&#720;.&#115;&#618; &#712;&#100;&#603;&#720;.&#107;&#601;.&#109;&#593;</span>].
 
     <p>
-    If you don't know IPA for some reason, then the way to say my name in English is "grooth-HOW-zin day-KA-ma".
+    If you don't know IPA for some reason, then the way to say my name in English is "grooth-HOW-zin DAY-k&#601;-m&#601;".
   </div>
 
 </body>
