--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     Here is the animation that accompanies many of the above talks:
 
     <p>
-    <!-- <video class="animation" src="media/gh_cyc_animation.mp4" controls="controls"> </video> -->
+    <video class="animation" src="media/gh_cyc_animation.mp4" controls="controls"> </video>
 
     <p>
     This animation is an example of a trajectory near the <i>Guckenheimer-Holmes cycle</i>, the prototypical example of a heteroclinic cycle. It was first considered by May and Leonard (though not using the terminology of heteroclinic cycles) in their study of nonlinear competition between three species. Each of the three coordinates represents the density of each of three species which compete with each other in a cyclic manner, just like the game of Rock-Paper-Scissors. In their words,
@@ -85,7 +85,7 @@
     ]. The correct way to say it in Dutch, however, is [<span style="font-family: sans-serif;">&#712;&#611;&#638;&#111;&#720;&#116;.&#614;&#339;&#121;&#815;.&#122;&#618;&#110; &#712;&#100;&#603;&#105;&#815;.&#107;&#601;.&#109;&#593;</span>]. In the dialect where my family is from, it is said [<span style="font-family: sans-serif;">&#712;&#967;&#638;&#596;&#117;&#815;&#116;.&#614;&#339;&#720;.&#115;&#618; &#712;&#100;&#603;&#720;.&#107;&#601;.&#109;&#593;</span>].
 
     <p>
-    If you don't know IPA for some reason, then the way to say my name in English is "grooth-HOW-zin DAY-k&#601;-m&#601;".
+    If you don't know IPA for some reason, then the way to say my name in English is <span style="font-family: sans-serif;">"grooth-HOW-zin DAY-k&#601;-m&#601;"</span>.
   </div>
 
 </body>
