--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <style>
     body { padding-left: 10%; padding-top:3em; font-family: 'Zen Kaku Gothic New', sans-serif ; margin-right: 10% }
     div {margin-left:-2em; margin-top:2em; padding-left:2em; padding-right:2em; padding-bottom:1em; margin-bottom:1em; padding-top:1em; border: 2px solid black; border-radius: 5px; overflow:auto; }
-    /* video {max-width: 730px;} */
   </style>
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -57,7 +56,7 @@
     Here is the animation that accompanies many of the above talks:
 
     <p>
-    <video class="animation" src="media/gh_cyc_animation.mp4" controls="controls"> </video>
+    <video style="max-width: 700px;" src="media/gh_cyc_animation.mp4" controls="controls"> </video>
 
     <p>
     This animation is an example of a trajectory near the <i>Guckenheimer-Holmes cycle</i>, the prototypical example of a heteroclinic cycle. It was first considered by May and Leonard (though not using the terminology of heteroclinic cycles) in their study of nonlinear competition between three species. Each of the three coordinates represents the density of each of three species which compete with each other in a cyclic manner, just like the game of Rock-Paper-Scissors. In their words,
