--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div id="publications">
     <h2>Preprints</h2>
     <ol reversed>
-      <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2022). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Submitted to Nonlinearity.</i> <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630</a></li>
+      <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2022). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Submitted to Nonlinearity.</i> <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630 [math.DS]</a></li>
     </ol>
   </div>
 
