--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 
   <div id="lastname">
     <h3>My surname</h3>
-    My surname is Dutch, and maximally unpronounceable. The way I say it in English is [<span style="font-family: sans-serif;">&#609;&#633;&#649;&#720;&#952;'&#104;&#592;&#649;&#815;&#716;&#122;&#618;&#110; &#100;&#101;&#618;&#815;'&#107;&#601;&#716;&#109;&#601;</span>
-    ]. The correct way to say it in Dutch, however, is [<span style="font-family: sans-serif;">&#712;&#611;&#638;&#111;&#720;&#116;.&#614;&#339;&#121;&#815;.&#122;&#618;&#110; &#712;&#100;&#603;&#105;&#815;.&#107;&#601;.&#109;&#593;</span>]. In the dialect where my family is from, it is said [<span style="font-family: sans-serif;">&#712;&#967;&#638;&#596;&#117;&#815;&#116;.&#614;&#339;&#720;.&#115;&#618; &#712;&#100;&#603;&#720;.&#107;&#601;.&#109;&#593;</span>].
+    My surname is Dutch, and maximally unpronounceable. The way I say it in English is [<span style="font-family: sans-serif;">&#609;&#633;&#649;&#720;&#952;'&#104;&#592;&#649;&#815;&#716;&#122;&#618;&#110; &#100;&#101;&#618;&#815;'&#107;&#601;&#716;&#109;&#601;</span>]. The correct way to say it in Dutch, however, is [<span style="font-family: sans-serif;">&#712;&#611;&#638;&#111;&#720;&#116;.&#614;&#339;&#121;&#815;.&#122;&#618;&#110; &#712;&#100;&#603;&#105;&#815;.&#107;&#601;.&#109;&#593;</span>]. In the dialect where my family is from, it is said [<span style="font-family: sans-serif;">&#712;&#967;&#638;&#596;&#117;&#815;&#116;.&#614;&#339;&#720;.&#115;&#618; &#712;&#100;&#603;&#720;.&#107;&#601;.&#109;&#593;</span>].
 
     <p>
     If you don't know IPA for some reason, then the way to say my name in English is <span style="font-family: sans-serif;">"grooth-HOW-zin DAY-k&#601;-m&#601;"</span>.
