--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
+  <span style="float:right;width:20%;height:15em;margin-top:3em;margin-left:3em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
   <h1>David C Groothuizen Dijkema</h1>
+
 
   I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
 
