--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
 </head>
 
 <body>
-  <span style="float:right;width:20%;height:15em;margin-top:3em;margin-left:3em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
-  <h1>David C Groothuizen Dijkema</h1>
+  <div id="intro" style="border: none !important;
+  ">
+    <span style="float:right;width:20%;height:15em;margin-top:3em;margin-left:4em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
+    <h1>David C Groothuizen Dijkema</h1>
 
+    I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
 
-  I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
+    <p>
+    <a style="font-weight:bold" href="mailto:david.groothuizen.dijkema@auckland.ac.nz">My email: david.groothuizen.dijkema@auckland.ac.nz</a>
 
-  <p>
-  <a style="font-weight:bold" href="mailto:david.groothuizen.dijkema@auckland.ac.nz">My email: david.groothuizen.dijkema@auckland.ac.nz</a>
+    <p>
+    <a style="font-weight:bold" href="https://profiles.auckland.ac.nz/david-groothuizen-dijkema">My University of Auckland profile.</a>
 
-  <p>
-  <a style="font-weight:bold" href="https://profiles.auckland.ac.nz/david-groothuizen-dijkema">My University of Auckland profile.</a>
-
-  <p>
-  <a href="documents/cv.pdf">My CV.</a>
+    <p>
+    <a href="documents/cv.pdf">My CV.</a>
+  </div>
 
   <div id="publications">
     <h2>Preprints</h2>
@@ -41,15 +43,18 @@
   <div id="talks">
     <h2>Talks and Posters</h2>
     <h3>Talks</h2>
-    <ol reversed>
-      <li><b>(Upcoming) 12 May 2023</b>: <i>Switching near heteroclinic networks as a piecewise-smooth dynamical system</i>, SIAM Conference on Applications of Dynamical Systems 2023.</li>
-      <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="slides/nzms2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, New Zealand Mathematical Society Colloquium 2022.</li>
-      <li><b>14 November 2022</b>: <a href="slides/castaways2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, Sydney Dynamics Group Workshop 2022: Dynamical Systems in NZ - Castaways.</li>
-      <li><b>6 October 2022</b>: <a href="slides/amu2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, University of Auckland Department of Mathematics Applied Mathematics Postgraduate Seminar 2022.</li>
-      <li><b>7 June 2022</b>: <a href="slides/src2022.pdf" target="_blank">Stability and cycling near heteroclinic cycles and networks</a>, University of Auckland Department of Mathematics Student Research Conference 2022.</li>
-      <li><b>8 June 2021</b>: <i>Spatially extended models of competition between four species</i>, University of Auckland Department of Mathematics Postgraduate Student Seminar 2021</li>
-      <li><b>8 June 2021</b>: <i>A spatially-extended model of competition between four species</i>, University of Auckland Department of Mathematics Student Research Conference 2021</li>
-      <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, University of Auckland Summer Research Conference 2021</li>
+    <ol reversed> 
+      <li><b>27 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Leeds Applied Nonlinear Dynamics (LAND) Seminar, Department of Mathematics, University of Leeds, UK.</li>
+      <li><b>23 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Centro de Matemática - Universidade do Porto (CMUP) Seminar, Universidade do Porto, Portugal.</li>
+      <li><b>12 May 2023</b>: <i>Switching near heteroclinic networks as a piecewise-smooth dynamical system</i>, SIAM Conference on Applications of Dynamical Systems, Portland, OR, USA.</li>
+      <!-- <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="slides/nzms2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, New Zealand Mathematical Society Colloquium, Christchurch, NZ.</li> -->
+      <li><b>14 November 2022</b>: <a href="slides/castaways2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Sydney Dynamics Group Workshop: Dynamical Systems in NZ - Castaways, Auckland, NZ.</li>
+      <li><b>6 October 2022</b>: <a href="slides/amu2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Applied Mathematics Unit (AMU) Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
+      <li><b>7 June 2022</b>: <a href="slides/src2022.pdf" target="_blank"><i>Stability and cycling near heteroclinic cycles and networks</i></a>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
+      <!-- <li><b>17 November 2021</b> (did not present): <i>A heteroclinic network in a four species interaction model</i>, New Zealand Mathematics and Statistics Postgraduate Conference, University of Waikato, NZ.</li> -->
+      <li><b>21 July 2021</b>: <i>Spatially extended models of competition between four species</i>, Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
+      <li><b>8 June 2021</b>: <i>A spatially-extended model of competition between four species</i>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
+      <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, Summer Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
     </ol>
 
     <hr>
@@ -75,12 +80,12 @@
 
     <h3>Posters</h2>
       <ol reversed>
-        <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="posters/nzms2022.pdf" target="_blank">Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition</a>, New Zealand Mathematical Society Colloquium 2022.</li>
-        <li><b>13 October 2022</b>: <a href="posters/antipodeal.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth dynamical system</a>, Antipodeal Dynamics Workshop 2023.</li>
+        <li><b>13 October 2022</b>: <a href="posters/antipodeal.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth dynamical system</a>, Antipodeal Dynamics Workshop, Centre for Systems, Dynamics and Control, Department of Mathematics, University of Exeter, UK and the Department of Mathematics, University of Auckland, NZ.</li>
       </ol>
+      The following was prepared to be presented, but could not be due to COVID-19. <b>6 December 2022</b>: <a href="posters/nzms2022.pdf" target="_blank">Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition</a>, New Zealand Mathematical Society Colloquium, Christchurch, NZ.
   </div>
 
-  <div id="lastname">
+  <div id="surname">
     <h3>My surname</h3>
     My surname is Dutch, and maximally unpronounceable. The way I say it in English is [<span style="font-family: sans-serif;">&#609;&#633;&#649;&#720;&#952;'&#104;&#592;&#649;&#815;&#716;&#122;&#618;&#110; &#100;&#101;&#618;&#815;'&#107;&#618;&#716;&#109;&#601;</span>]. The correct way to say it in Dutch, however, is [<span style="font-family: sans-serif;">&#712;&#611;&#638;&#111;&#720;&#116;.&#614;&#339;&#121;&#815;.&#122;&#618;&#110; &#712;&#100;&#603;&#105;&#815;.&#107;&#601;.&#109;&#593;</span>]. In the dialect where my family is from, it is said [<span style="font-family: sans-serif;">&#712;&#967;&#638;&#596;&#117;&#815;&#116;.&#614;&#339;&#720;.&#115;&#618; &#712;&#100;&#603;&#720;.&#107;&#601;.&#109;&#593;</span>].
 
