--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
   <style>
     body { padding-left: 10%; padding-top:3em; font-family: 'Zen Kaku Gothic New', sans-serif ; margin-right: 10% }
-    div {margin-left:-2em; margin-top:2em; padding-left:2em; padding-right:2em; padding-bottom:1em; margin-bottom:1em; padding-top:1em; border: 2px solid black; border-radius: 5px; overflow:auto; }
+    div { margin-left:-2em; margin-top:2em; padding-left:2em; padding-right:2em; padding-bottom:1em; margin-bottom:1em; padding-top:1em; border: 2px solid black; border-radius: 5px; overflow:auto; }
   </style>
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -18,7 +18,7 @@
 <body>
   <div id="intro" style="border: none !important;
   ">
-    <span style="float:right;width:20%;height:15em;margin-top:3em;margin-left:4em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
+    <span style="float:right;width:20%;height:20em;margin-top:0em;margin-bottom:-2em;margin-left:4em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
     <h1>David C Groothuizen Dijkema</h1>
 
     I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
