--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-  <div id="intro" style="border: none !important;
-  ">
+  <div id="intro" style="border: none !important; overflow-y: hidden;">
     <span style="float:right;width:20%;height:20em;margin-top:0em;margin-bottom:-2em;margin-left:4em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
     <h1>David C Groothuizen Dijkema</h1>
 
