--- a/index.html
+++ b/index.html
@@ -16,81 +16,82 @@
 </head>
 
 <body>
-  <div id="intro" style="border: none !important; overflow-y: hidden;">
-    <span style="float:right;width:20%;height:20em;margin-top:0em;margin-bottom:-2em;margin-left:4em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
-    <h1>David C Groothuizen Dijkema</h1>
+  <div style="border: none !important; overflow-y: hidden; width: 960px; margin:0 auto;">
+    <div id="intro" style="border: none !important; overflow-y: hidden;">
+      <span style="float:right;width:20%;height:20em;margin-top:1em;margin-bottom:-2em;margin-left:4em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
+      <h1>David C Groothuizen Dijkema</h1>
 
-    I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
-
-    <p>
-    <a style="font-weight:bold" href="mailto:david.groothuizen.dijkema@auckland.ac.nz">My email: david.groothuizen.dijkema@auckland.ac.nz</a>
-
-    <p>
-    <a style="font-weight:bold" href="https://profiles.auckland.ac.nz/david-groothuizen-dijkema">My University of Auckland profile.</a>
-
-    <p>
-    <a href="documents/cv.pdf">My CV.</a>
-  </div>
-
-  <div id="publications">
-    <h2>Preprints</h2>
-    <ol reversed>
-      <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2022). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Submitted to Nonlinearity.</i> <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630 [math.DS]</a></li>
-    </ol>
-  </div>
-
-  <div id="talks">
-    <h2>Talks and Posters</h2>
-    <h3>Talks</h2>
-    <ol reversed> 
-      <li><b>27 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Leeds Applied Nonlinear Dynamics (LAND) Seminar, Department of Mathematics, University of Leeds, UK.</li>
-      <li><b>23 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Centro de Matemática - Universidade do Porto (CMUP) Seminar, Universidade do Porto, Portugal.</li>
-      <li><b>12 May 2023</b>: <i>Switching near heteroclinic networks as a piecewise-smooth dynamical system</i>, SIAM Conference on Applications of Dynamical Systems, Portland, OR, USA.</li>
-      <!-- <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="slides/nzms2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, New Zealand Mathematical Society Colloquium, Christchurch, NZ.</li> -->
-      <li><b>14 November 2022</b>: <a href="slides/castaways2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Sydney Dynamics Group Workshop: Dynamical Systems in NZ - Castaways, Auckland, NZ.</li>
-      <li><b>6 October 2022</b>: <a href="slides/amu2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Applied Mathematics Unit (AMU) Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
-      <li><b>7 June 2022</b>: <a href="slides/src2022.pdf" target="_blank"><i>Stability and cycling near heteroclinic cycles and networks</i></a>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
-      <!-- <li><b>17 November 2021</b> (did not present): <i>A heteroclinic network in a four species interaction model</i>, New Zealand Mathematics and Statistics Postgraduate Conference, University of Waikato, NZ.</li> -->
-      <li><b>21 July 2021</b>: <i>Spatially extended models of competition between four species</i>, Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
-      <li><b>8 June 2021</b>: <i>A spatially-extended model of competition between four species</i>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
-      <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, Summer Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
-    </ol>
-
-    <hr>
-
-    <p>
-    Here is the animation that accompanies many of the above talks:
-
-    <p>
-    <video style="max-width: 700px;" src="media/gh_cyc_animation.mp4" controls="controls"> </video>
-
-    <p>
-    This animation is an example of a trajectory near the <i>Guckenheimer-Holmes cycle</i>, the prototypical example of a heteroclinic cycle. It was first considered by May and Leonard (though not using the terminology of heteroclinic cycles) in their study of nonlinear competition between three species. Each of the three coordinates represents the density of each of three species which compete with each other in a cyclic manner, just like the game of Rock-Paper-Scissors. In their words,
-
-    <blockquote style="max-width:70%; border-left: thick solid black; padding:1em; background: #EEE">
-
-      &hellip;[A] nonlinear study of this domain of parameter space reveals &hellip; a wider class of asymptotic solutions in which the system cycles from being composed almost wholly of population 1, to almost wholly 2, to almost wholly 3, back to 1, but with the time to complete the cycle becoming longer and longer (being proportional to the length of time the system has been running), and with the system coming in turn ever closer to the points with 1 alone, 2 alone and 3 alone, yet never actually converging on any one point.
+      I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
 
       <p>
-      <a href="https://doi.org/10.1137/0129022" target="_blank">May R and Leonard L 1975 <i>SIAM J. Appl. Math.</i> <b>29</b> 243</a>
-    </blockquote>
+      <a style="font-weight:bold" href="mailto:david.groothuizen.dijkema@auckland.ac.nz">My email: david.groothuizen.dijkema@auckland.ac.nz</a>
 
-    <hr>
+      <p>
+      <a style="font-weight:bold" href="https://profiles.auckland.ac.nz/david-groothuizen-dijkema">My University of Auckland profile.</a>
 
-    <h3>Posters</h2>
+      <p>
+      <a href="documents/cv.pdf">My CV.</a>
+    </div>
+
+    <div id="publications">
+      <h2>Preprints</h2>
       <ol reversed>
-        <li><b>13 October 2022</b>: <a href="posters/antipodeal.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth dynamical system</a>, Antipodeal Dynamics Workshop, Centre for Systems, Dynamics and Control, Department of Mathematics, University of Exeter, UK and the Department of Mathematics, University of Auckland, NZ.</li>
+        <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2022). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Submitted to Nonlinearity.</i> <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630 [math.DS]</a></li>
       </ol>
-      The following was prepared to be presented, but could not be due to COVID-19. <b>6 December 2022</b>: <a href="posters/nzms2022.pdf" target="_blank">Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition</a>, New Zealand Mathematical Society Colloquium, Christchurch, NZ.
+    </div>
+
+    <div id="talks">
+      <h2>Talks and Posters</h2>
+      <h3>Talks</h2>
+      <ol reversed>
+        <li><b>27 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Leeds Applied Nonlinear Dynamics (LAND) Seminar, Department of Mathematics, University of Leeds, UK.</li>
+        <li><b>23 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Centro de Matemática - Universidade do Porto (CMUP) Seminar, Universidade do Porto, Portugal.</li>
+        <li><b>12 May 2023</b>: <i>Switching near heteroclinic networks as a piecewise-smooth dynamical system</i>, SIAM Conference on Applications of Dynamical Systems, Portland, OR, USA.</li>
+        <!-- <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="slides/nzms2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, New Zealand Mathematical Society Colloquium, Christchurch, NZ.</li> -->
+        <li><b>14 November 2022</b>: <a href="slides/castaways2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Sydney Dynamics Group Workshop: Dynamical Systems in NZ - Castaways, Auckland, NZ.</li>
+        <li><b>6 October 2022</b>: <a href="slides/amu2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Applied Mathematics Unit (AMU) Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
+        <li><b>7 June 2022</b>: <a href="slides/src2022.pdf" target="_blank"><i>Stability and cycling near heteroclinic cycles and networks</i></a>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
+        <!-- <li><b>17 November 2021</b> (did not present): <i>A heteroclinic network in a four species interaction model</i>, New Zealand Mathematics and Statistics Postgraduate Conference, University of Waikato, NZ.</li> -->
+        <li><b>21 July 2021</b>: <i>Spatially extended models of competition between four species</i>, Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
+        <li><b>8 June 2021</b>: <i>A spatially-extended model of competition between four species</i>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
+        <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, Summer Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
+      </ol>
+
+      <hr>
+
+      <p>
+      Here is the animation that accompanies many of the above talks:
+
+      <p>
+      <video style="max-width: 700px;" src="media/gh_cyc_animation.mp4" controls="controls"> </video>
+
+      <p>
+      This animation is an example of a trajectory near the <i>Guckenheimer-Holmes cycle</i>, the prototypical example of a heteroclinic cycle. It was first considered by May and Leonard (though not using the terminology of heteroclinic cycles) in their study of nonlinear competition between three species. Each of the three coordinates represents the density of each of three species which compete with each other in a cyclic manner, just like the game of Rock-Paper-Scissors. In their words,
+
+      <blockquote style="max-width:70%; border-left: thick solid black; padding:1em; background: #EEE">
+
+        &hellip;[A] nonlinear study of this domain of parameter space reveals &hellip; a wider class of asymptotic solutions in which the system cycles from being composed almost wholly of population 1, to almost wholly 2, to almost wholly 3, back to 1, but with the time to complete the cycle becoming longer and longer (being proportional to the length of time the system has been running), and with the system coming in turn ever closer to the points with 1 alone, 2 alone and 3 alone, yet never actually converging on any one point.
+
+        <p>
+        <a href="https://doi.org/10.1137/0129022" target="_blank">May R and Leonard L 1975 <i>SIAM J. Appl. Math.</i> <b>29</b> 243</a>
+      </blockquote>
+
+      <hr>
+
+      <h3>Posters</h2>
+        <ol reversed>
+          <li><b>13 October 2022</b>: <a href="posters/antipodeal.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth dynamical system</a>, Antipodeal Dynamics Workshop, Centre for Systems, Dynamics and Control, Department of Mathematics, University of Exeter, UK and the Department of Mathematics, University of Auckland, NZ.</li>
+        </ol>
+        The following was prepared to be presented, but could not be due to COVID-19. <b>6 December 2022</b>: <a href="posters/nzms2022.pdf" target="_blank">Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition</a>, New Zealand Mathematical Society Colloquium, Christchurch, NZ.
+    </div>
+
+    <div id="surname">
+      <h3>My surname</h3>
+      My surname is Dutch, and maximally unpronounceable. The way I say it in English is [<span style="font-family: sans-serif;">&#609;&#633;&#649;&#720;&#952;'&#104;&#592;&#649;&#815;&#716;&#122;&#618;&#110; &#100;&#101;&#618;&#815;'&#107;&#618;&#716;&#109;&#601;</span>]. The correct way to say it in Dutch, however, is [<span style="font-family: sans-serif;">&#712;&#611;&#638;&#111;&#720;&#116;.&#614;&#339;&#121;&#815;.&#122;&#601;&#40;&#110;&#41; &#712;&#100;&#603;&#105;&#815;.&#107;&#601;.&#109;&#593;</span>]. In the dialect where my family is from, it is said [<span style="font-family: sans-serif;">&#712;&#967;&#638;&#596;&#117;&#815;&#116;.&#104;&#339;&#720;.&#115;&#601; &#712;&#100;&#603;&#720;.&#107;&#601;.&#109;&#593;</span>].
+
+      <p>
+      If you don't know <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet" target="_blank">IPA</a> for some reason, then <a href="https://en.wikipedia.org/wiki/Help:Pronunciation_respelling_key" target="_blank">the way to say my name in English</a> is <span style="font-family: sans-serif;">"grooth-HOW-zin DAY-ki-m&#601;"</span>.
+    </div>
   </div>
-
-  <div id="surname">
-    <h3>My surname</h3>
-    My surname is Dutch, and maximally unpronounceable. The way I say it in English is [<span style="font-family: sans-serif;">&#609;&#633;&#649;&#720;&#952;'&#104;&#592;&#649;&#815;&#716;&#122;&#618;&#110; &#100;&#101;&#618;&#815;'&#107;&#618;&#716;&#109;&#601;</span>]. The correct way to say it in Dutch, however, is [<span style="font-family: sans-serif;">&#712;&#611;&#638;&#111;&#720;&#116;.&#614;&#339;&#121;&#815;.&#122;&#601;&#40;&#110;&#41; &#712;&#100;&#603;&#105;&#815;.&#107;&#601;.&#109;&#593;</span>]. In the dialect where my family is from, it is said [<span style="font-family: sans-serif;">&#712;&#967;&#638;&#596;&#117;&#815;&#116;.&#104;&#339;&#720;.&#115;&#601; &#712;&#100;&#603;&#720;.&#107;&#601;.&#109;&#593;</span>].
-
-    <p>
-    If you don't know <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet" target="_blank">IPA</a> for some reason, then <a href="https://en.wikipedia.org/wiki/Help:Pronunciation_respelling_key" target="_blank">the way to say my name in English</a> is <span style="font-family: sans-serif;">"grooth-HOW-zin DAY-ki-m&#601;"</span>.
-  </div>
-
 </body>
 </html>
