--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
 
     <div id="publications">
-      <h2>Preprints</h2>
+      <h2>Publications and Preprints</h2>
       <ol reversed>
-        <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2022). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Submitted to Nonlinearity.</i> <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630 [math.DS]</a></li>
+        <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2022). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Accepted for publication in Nonlinearity.</i> <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630 [math.DS]</a></li>
       </ol>
     </div>
 
