--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="publications">
       <h2>Publications and Preprints</h2>
       <ol reversed>
-        <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2023). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Nonlinearity</i>, <b>36</b>(12) 6546&#8212;6588. DOI: <a href="https://doi.org/10.1088/1361-6544/ad0212">10.1088/1361-6544/ad0212</a>. arXiv: <a href="https://arxiv.org/abs/2208.05630">arXiv:2208.05630 [math.DS]</a></li>
+        <li>David C Groothuizen Dijkema and Claire M Postlethwaite. (2023). Travelling waves and heteroclinic networks in models of spatially-extended cyclic competition. <i>Nonlinearity</i>, <b>36</b>(12) 6546&#8212;6588. DOI: <a href="https://doi.org/10.1088/1361-6544/ad0212">10.1088/1361-6544/ad0212</a>. arXiv: <a href="https://arxiv.org/abs/2208.05630">2208.05630 [math.DS]</a></li>
       </ol>
     </div>
 
