--- a/index.html
+++ b/index.html
@@ -44,17 +44,20 @@
       <h2>Talks and Posters</h2>
       <h3>Talks</h2>
       <ol reversed>
+        <!-- <li><b>13 February 2024</b>: <i>TBD</i>, Australia and New Zealand Industrial and Applied Mathematics (ANZIAM) Conference, Adelaide, SA, Australia.</li> -->
+        <!-- <li><b>1 December 2023</b>: <i>TBD</i>, New Zealand Mathematical Society (NZMS) Colloquium, Victoria University of Wellington, NZ.</li> -->
+        <!-- <li><b>29 November 2023</b>: <i>Travelling waves and heteroclinic networks in spatially-extended models of cyclic competition</i>, New Zealand Mathematics and Statistics Postgraduate (NZMASP) Conference, Victoria University of Wellington, NZ.</li> -->
         <li><b>27 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Leeds Applied Nonlinear Dynamics (LAND) Seminar, Department of Mathematics, University of Leeds, UK.</li>
         <li><b>23 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Centro de Matemática - Universidade do Porto (CMUP) Seminar, Universidade do Porto, Portugal.</li>
         <li><b>12 May 2023</b>: <i>Switching near heteroclinic networks as a piecewise-smooth dynamical system</i>, SIAM Conference on Applications of Dynamical Systems, Portland, OR, USA.</li>
         <!-- <li><b>6 December 2022</b> (did not present due to COVID-19): <a href="slides/nzms2022.pdf" target="_blank">Switching near heteroclinic networks as a piecewise-smooth system</a>, New Zealand Mathematical Society Colloquium, Christchurch, NZ.</li> -->
         <li><b>14 November 2022</b>: <a href="slides/castaways2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Sydney Dynamics Group Workshop: Dynamical Systems in NZ - Castaways, Auckland, NZ.</li>
-        <li><b>6 October 2022</b>: <a href="slides/amu2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Applied Mathematics Unit (AMU) Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
+        <li><b>6 October 2022</b>: <a href="slides/amu2022.pdf" target="_blank"><i>Switching near heteroclinic networks as a piecewise-smooth system</i></a>, Applied Mathematics Unit (AMU) Postgraduate Students Seminar, Department of Mathematics, University of Auckland, NZ.</li>
         <li><b>7 June 2022</b>: <a href="slides/src2022.pdf" target="_blank"><i>Stability and cycling near heteroclinic cycles and networks</i></a>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
         <!-- <li><b>17 November 2021</b> (did not present): <i>A heteroclinic network in a four species interaction model</i>, New Zealand Mathematics and Statistics Postgraduate Conference, University of Waikato, NZ.</li> -->
-        <li><b>21 July 2021</b>: <i>Spatially extended models of competition between four species</i>, Postgraduate Students' Seminar, Department of Mathematics, University of Auckland, NZ.</li>
+        <li><b>21 July 2021</b>: <i>Spatially extended models of competition between four species</i>, Postgraduate Students Seminar, Department of Mathematics, University of Auckland, NZ.</li>
         <li><b>8 June 2021</b>: <i>A spatially-extended model of competition between four species</i>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
-        <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, Summer Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
+        <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, Summer Research Students Conference, Department of Mathematics, University of Auckland, NZ.</li>
       </ol>
 
       <hr>
