--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <span style="float:right;width:20%;height:20em;margin-top:1em;margin-bottom:-2em;margin-left:4em;margin-right:0em"><img src="media/photo.png" alt="Self-portrait on the Ponte de Dom Lu&#237;s I" style="max-width:100%;max-height:100%"/></span>
       <h1>David C Groothuizen Dijkema</h1>
 
-      I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
+      I am a doctoral candidate in mathematics at the University of Auckland, under the supervision of Professors Claire Postlethwaite and Vivien Kirk. I am interested in the mathematical theory of dynamical systems, and my thesis is about dynamics near structures known as <i>heteroclinic networks</i>.
 
       <p>
       <a style="font-weight:bold" href="mailto:david.groothuizen.dijkema@auckland.ac.nz">My email: david.groothuizen.dijkema@auckland.ac.nz</a>
