--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li><b>6 October 2022</b>: <i>Switching near heteroclinic networks as a piecewise-smooth system</i>, Applied Mathematics Unit (AMU) Postgraduate Students Seminar, Department of Mathematics, University of Auckland, NZ.</li>
         <li><b>7 June 2022</b>: <i>Stability and cycling near heteroclinic cycles and networks</i>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
         <!-- <li><b>17 November 2021</b> (did not present): <i>A heteroclinic network in a four species interaction model</i>, New Zealand Mathematics and Statistics Postgraduate Conference, University of Waikato, NZ.</li> -->
-        <li><b>21 July 2021</b>: <i>Spatially extended models of competition between four species</i>, Postgraduate Students Seminar, Department of Mathematics, University of Auckland, NZ.</li>
+        <li><b>21 July 2021</b>: <i>Spatially extended models of competition between four species</i>, Postgraduate Students Seminar, Department of Mathematics, University of Auckland, NZ. (Received one of four prizes for best talk.)</li>
         <li><b>8 June 2021</b>: <i>A spatially-extended model of competition between four species</i>, Student Research Conference, Department of Mathematics, University of Auckland, NZ.</li>
         <li><b>4 February 2021</b>: <i>Heteroclinic networks in partial differential equations</i>, Summer Research Students Conference, Department of Mathematics, University of Auckland, NZ.</li>
       </ol>
