--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>Talks and Posters</h2>
       <h3>Talks</h2>
       <ol reversed>
-        <!-- <li><b>13 February 2024</b>: <i>Switching and cycling near heteroclinic networks as a piecewise-smooth dynamical system</i>, Australia and New Zealand Industrial and Applied Mathematics (ANZIAM) Conference, Adelaide, SA, Australia.</li> -->
+        <li><b>13 February 2024</b>: <i>Switching and cycling near heteroclinic networks as a piecewise-smooth dynamical system</i>, Australia and New Zealand Industrial and Applied Mathematics (ANZIAM) Conference, Hahndorf, SA, Australia.</li>
         <li><b>1 December 2023</b>: <i>Switching and cycling near heteroclinic networks as a piecewise-smooth dynamical system</i>, New Zealand Mathematical Society (NZMS) Colloquium, Victoria University of Wellington, NZ. (Received an honourable mention for the NZMS Aitken Award for Best Student Talk.)</li>
         <li><b>29 November 2023</b>: <i>Travelling waves and heteroclinic networks in spatially-extended models of cyclic competition</i>, New Zealand Mathematics and Statistics Postgraduate (NZMASP) Conference, Victoria University of Wellington, NZ.</li>
         <li><b>27 June 2023</b>: <i>Dynamics near heteroclinic cycles and networks</i>, Leeds Applied Nonlinear Dynamics (LAND) Seminar, Department of Mathematics, University of Leeds, UK.</li>
